# python-projects

./: .gitignore  README.md  quick_sort_2.py
Bin2Dec/: README.md
Python_connection/mysql/: auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
Python_connection/mysql/#innodb_redo/: #ib_redo9
Python_connection/mysql/mysql/: general_log_219.sdi  slow_log_220.sdi
Python_connection/mysql/performance_schema/: accounts_149.sdi  binary_log_trans_195.sdi  cond_instances_83.sdi  data_lock_waits_165.sdi  data_locks_164.sdi  error_log_84.sdi  events_errors_su_143.sdi  events_errors_su_144.sdi  (+107 more)
Scheduling/: scheduling.py  scheduling_module.py
api_test/: .coverage  .env  .gitignore  app.py  pyproject.toml
api_test/api_test/: app.py  database.py  models.py  schemas.py
api_test/migrations/: env.py
api_test/migrations/versions/: 2c51c437ac0f_create_users_table.py
api_test/tests/: conftest.py  test_app.py  test_db.py
baseball_game/: README.md  baseball_game.py
breastfeed_django/: README.md  pyproject.toml
breastfeed_django/breastfeed/: manage.py
bubble_sort/: README.md  bubble_sort.py
convertion_binary/: README.md  convertion_binary.py
json2csv/: README.md  input.csv  input.json  json2csv.py
jump_game/: README.md  jump.py
mean_median_mode/: get.py
quick_sort/: README.md  quick_sort.py  quick_sort_2.py
tic-tac-toe/: README.md  main.py
(+5 files in other folders)
