[project]
name = "api-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex", email = "alexander97643@gmail.com"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "api_test"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.11"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
