[project]
name = "api-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex", email = "alexander97643@gmail.com"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "api_test"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.11"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev api_test/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=api_test -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
